--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vadim Prokopchuk",
+  "author": "Andrii",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.5",
@@ -17,7 +17,9 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
-    "normalize.css": "^8.0.1"
+    "mixitup": "^3.3.1",
+    "normalize.css": "^8.0.1",
+    "rateyo": "^2.3.5"
   },
   "dependencies": {
     "slick-carousel": "^1.8.1"
